<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_bottom"
    android:gravity="center"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_item_one"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_item_selector"
            android:drawableTop="@drawable/bottom_bar_icon_me_selector"
            android:text="@string/bottom_item_one"
            android:textColor="@color/bottom_item_text_selector"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_warming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/bottom_item_warming_icon"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            android:text="@string/indicate_value"
            android:visibility="visible" />
    </RelativeLayout>

    <View
        android:layout_width="0.5dip"
        android:layout_height="fill_parent"
        android:layout_marginTop="8dip"
        android:background="@color/bottom_item_line_color" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_item_two"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_item_selector"
            android:drawableTop="@drawable/bottom_bar_icon_me_selector"
            android:text="@string/bottom_item_two"
            android:textColor="@color/bottom_item_text_selector"
            android:textSize="12sp" />
    </RelativeLayout>

    <View
        android:layout_width="0.5dip"
        android:layout_height="fill_parent"
        android:layout_marginTop="8dip"
        android:background="@color/bottom_item_line_color" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_item_three"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_item_selector"
            android:drawableTop="@drawable/bottom_bar_icon_team_selector"
            android:text="@string/bottom_item_three"
            android:textColor="@color/bottom_item_text_selector"
            android:textSize="12sp" />
    </RelativeLayout>

    <View
        android:layout_width="0.5dip"
        android:layout_height="fill_parent"
        android:layout_marginTop="8dip"
        android:background="@color/bottom_item_line_color" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_item_four"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_item_selector"
            android:drawableTop="@drawable/bottom_bar_icon_search_selector"
            android:text="@string/bottom_item_four"
            android:textColor="@color/bottom_item_text_selector"
            android:textSize="12sp" />
    </RelativeLayout>

    <View
        android:layout_width="0.5dip"
        android:layout_height="fill_parent"
        android:layout_marginTop="8dip"
        android:background="@color/bottom_item_line_color" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_item_five"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_item_selector"
            android:drawableTop="@drawable/bottom_bar_icon_set_selector"
            android:text="@string/bottom_item_five"
            android:textColor="@color/bottom_item_text_selector"
            android:textSize="12sp" />
    </RelativeLayout>

</LinearLayout>